# orco

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  a.out  compile.sh  flake.nix  rustc-ice-2025-09-07T13_05_35-121614.txt  rustc-ice-2025-09-07T13_11_40-122597.txt  rustc-ice-2025-09-07T13_17_11-123435.txt  rustc-ice-2025-09-13T10_29_00-22091.txt  rustc-ice-2025-09-13T10_32_07-22877.txt  rustc-ice-2025-09-13T10_47_20-26243.txt  rustc-ice-2025-09-13T10_48_31-26848.txt  rustc-ice-2025-09-13T10_51_42-27511.txt  rustc-ice-2025-09-18T15_56_26-43100.txt  rustc-ice-2025-09-18T16_27_30-49625.txt  rustc-ice-2025-09-18T16_29_48-50669.txt  rustc-ice-2025-09-30T14_04_21-76426.txt  rustc-ice-2025-10-03T13_37_08-16452.txt  rustc-ice-2025-10-03T14_12_59-22958.txt  rustc-ice-2025-10-03T14_15_48-23305.txt  rustc-ice-2025-10-03T14_23_51-25442.txt  rustc-ice-2025-10-04T13_18_44-5778.txt  rustc-ice-2025-10-04T13_58_07-18458.txt  rustc-ice-2025-10-04T13_58_55-18935.txt  rustc-ice-2025-10-04T14_01_35-19780.txt  rustc-ice-2025-10-04T16_22_55-51498.txt  rustc-ice-2025-10-12T08_43_27-9955.txt  rustc-ice-2025-10-12T08_51_13-23043.txt  test.sh  visualise.sh
.direnv/: flake-profile-2-link
backends/orco-backend-cranelift/: Cargo.toml
backends/orco-backend-cranelift/src/: function.rs  lib.rs  module.rs
backends/orco-backend-cranelift/src/expression/: block.rs  branching.rs  call.rs  constant.rs  mod.rs  operator.rs  symbol_reference.rs
backends/orco-backend-cranelift/src/expression/constant/: mod.rs  pool.rs
backends/orco-backend-cranelift/src/types/: mod.rs
backends/orco-cgen/: Cargo.toml
backends/orco-cgen/src/: backend.rs  codegen.rs  generics.rs  lib.rs  symbols.rs  types.rs
backends/orco-cgen/src/codegen/: mod.rs
backends/orco-cgen/src/codegen.old/: mod.rs
backends/orco-cgen/src/declare/: function.rs  mod.rs  primitives.rs  ty.rs
backends/orco-cgen/src/types/: mod.rs  primitives.rs
backends/orco-cranelift/: Cargo.toml  README.md
backends/orco-cranelift/src/: function.rs  lib.rs
backends/orco-cranelift/src/expression/: block.rs  control_flow.rs  literal.rs  mod.rs
backends/orco-cranelift/src/types/: mod.rs
backends/orco-ir/: Cargo.toml
backends/orco-ir/src/: lib.rs
backends/orco-ir/src/codegen/: intrinsics.rs  mod.rs
backends/orco-ir/src/ir/: intrinsics.rs  mod.rs  statement.rs
frontends/orco-c/: Cargo.toml
frontends/orco-c/samples/: simple.c
frontends/orco-c/src/: lib.rs  symbol_box.rs  unparse.rs
frontends/orco-c/src/expression/: functions.rs  literal.rs  mod.rs
frontends/orco-c/src/statement/: block.rs  branching.rs  control_flow.rs  mod.rs  variables.rs
frontends/orco-c/src/symbol/: function.rs  mod.rs
frontends/orco-ra/: Cargo.toml
frontends/orco-ra/src/: defs.rs  lib.rs  main.rs
frontends/orco-ra/src/codegen/: mod.rs  value.rs
frontends/orco-ra/src/types/: mod.rs
frontends/orco-rustc/: Cargo.toml
frontends/orco-rustc/samples/: expressions.rs  if_else.rs  nigel1.rs  primitives.rs  structs.rs
frontends/orco-rustc/src/: intrinsics.rs  lib.rs  names.rs  rustc_backend.rs  types.rs
lib/: entry.c  stdio.c
orco/: Cargo.toml  README.md
orco-cli/: Cargo.toml  README.md
orco-cli/src/: main.rs
orco-cranelift/src/: function.rs  lib.rs
orco-cranelift/src/function/: signature_builder.rs
orco-lang/: Cargo.toml  README.md
orco-lang/samples/: calc.orco  fizzbuzz.orco  simple.orco
orco-lang/src/: lexer.rs  lib.rs  parser.lalrpop  parser_utils.rs
orco-lang/src/lexer/: mod.rs  unescape.rs
orco-lang/src/parser/: mod.rs
orco-lang/src/parser/expression/: block.rs  branching.rs  function.rs  mod.rs  operator.rs
orco-lang/src/parser/item/: mod.rs
orco-lang/src/parser/item/function/: mod.rs  signature.rs
orco-lang/src/parser/symbol/: mod.rs
orco-lang/src/parser/symbol/function/: mod.rs  signature.rs
orco-lang/src/parser/type/: mod.rs
orco-lang/tests/: lexer.rs  parser.rs  parser_utils.rs
orco-procmacro/: Cargo.toml
orco-procmacro/src/: lib.rs
orco-ra/: Cargo.toml
orco-rust/: Cargo.toml
orco-rust/samples/: simple.rs
orco-rust/src/: main.rs
orco-rust/src/backend/: mod.rs
orco-rust/src/backend/function/: mod.rs
orco-rust/src/diagnostic/: mod.rs
orco-rust/src/hir/: function.rs  interner.rs  mod.rs  ty.rs
orco-rust/src/hir/expression/: block.rs  literal.rs  mod.rs  operator.rs  symbol.rs
orco-visual/: Cargo.toml  README.md
orco-visual/src/: lib.rs
orco-visual/src/ir/: mod.rs
orco-visual/src/ir/expression/: mod.rs
orco/src/: attrs.rs  codegen.rs  diagnostic.rs  diagnostics.rs  lib.rs  middleware.rs  mutability.rs  source.rs  symbol_box.rs  symbol_mapper.rs  symbol_ref.rs  symbol_reference.rs  type_inference.rs  type_intern.rs  types.rs  variable_mapper.rs
orco/src/backend/: mod.rs
orco/src/backend/function/: mod.rs
orco/src/codebase/: file.rs  mod.rs
orco/src/codegen/: impls.rs  mod.rs  values.rs
orco/src/diagnostic/: mod.rs  symbol_not_found.rs  syntax_error.rs
orco/src/expression/: block.rs  constant.rs  control_flow.rs  function.rs  functions.rs  literal.rs  mod.rs  variables.rs
orco/src/expression/call/: mod.rs
orco/src/expression/operators/: mod.rs
orco/src/frontend/: mod.rs
orco/src/interpreter/: mod.rs  operator.rs  value.rs
orco/src/ir/: mod.rs  symbol.rs
orco/src/ir/expression/: block.rs  branching.rs  call.rs  constant.rs  control_flow.rs  mod.rs  operator.rs  symbol_reference.rs  variable_declaration.rs
orco/src/ir/expression/function/: mod.rs  signature.rs
orco/src/ir/item/: mod.rs
orco/src/ir/item/function/: mod.rs  signature.rs
orco/src/ir/symbol/: mod.rs
orco/src/ir/symbol/function/: mod.rs  signature.rs
orco/src/ir/types/: mod.rs
orco/src/registry/: mod.rs
orco/src/symbol/: function.rs  mod.rs
orco/src/type_inference/: intrinsics.rs  mod.rs  scopes.rs
orco/tests/: diagnostics.rs  files.rs  interner.rs  parser_utils.rs  test_utils.rs  type_inference.rs
samples/: simple.rs
src/: diagnostic.rs  lib.rs
src/codebase/: file.rs  mod.rs
src/ir/: mod.rs
tests/: diagnostics.rs  files.rs  utils.rs
(+9 files in other folders)
