[workspace]
resolver = "1"
members = [ "backends/orco-cranelift", "frontends/orco-c","orco", "orco-cli", "orco-procmacro"]

[workspace.dependencies]
log = "0.4.22"
assert2 = "0.3.15"
orco = { path = "orco" }
orco-procmacro = { path = "orco-procmacro" }
orco-c = { path = "frontends/orco-c" }
orco-cranelift = { path = "backends/orco-cranelift" }
