[package]
name = "orco-lang"
version = "0.0.1"
edition = "2021"
authors = ["InfiniteCoder <info@infiniteoder.org"]
description = "OrCo language frontend (parser) for OrCo compiler"
readme = "README.md"
repository = "https://github.com/infinitecoder/orco"
license = "MIT OR Apache-2.0"
keywords = ["orco", "compiler", "parser", "language"]
categories = [
    "compilers",
    "parser-implementations",
]

[dependencies]
assert2 = "0.3.14"
logos = "0.14.0"
orco = { path = "../orco", version = "0.0.1" }
