[package]
name = "orco-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
orco = { workspace = true }
orco-cranelift = { path = "../orco-cranelift" }

rayon = "1.10.0"
indexland = "0.2.1"
interned-string = "0.3.0"

syn = { version = "2.0.98", features = ["full"] }
proc-macro2 = { version = "1.0.94", features = ["span-locations"] }
