[package]
name = "orco-visual"
version = "0.0.1"
edition = "2021"
authors = ["InfiniteCoder <info@infinitecoder.org>"]
description = "Visualisation of compilation for orco"
readme = "README.md"
repository = "https://github.com/InfiniteCoder01/orco"
license = "MIT OR Apache-2.0"
keywords = ["orco", "compiler", "visual"]
categories = ["compilers", "development-tools", "visualization"]

[dependencies]
font-kit = "0.13.2"
orco = { path = "../orco", version = "0.0.1" }
raqote = "0.8.4"
