[package]
name = "orco"
version = "0.0.1"
edition = "2021"
authors = ["InfiniteCoder <info@infinitecoder.org>"]
description = "Cross-platform compiler. IR and tools to work with it"
readme = "README.md"
repository = "https://github.com/InfiniteCoder01/orco"
license = "MIT OR Apache-2.0"
keywords = ["orco", "compiler", "ir"]
categories = [
    "compilers",
    "data-structures",
    "development-tools",
]

[dependencies]
codespan-reporting = { git = "https://github.com/InfiniteCoder01/codespan", branch = "with_note-and-with_label" }

[dev-dependencies]
gag = "1.0.0"
