[package]
name = "orco"
version = "0.0.1"
edition = "2021"
authors = ["InfiniteCoder <info@infinitecoder.org>"]
description = "Cross-platform compiler. IR and tools to work with it"
readme = "README.md"
repository = "https://github.com/InfiniteCoder01/orco"
license = "MIT OR Apache-2.0"
keywords = ["orco", "compiler", "ir"]
categories = [
    "compilers",
    "data-structures",
    "development-tools",
]

[dependencies]
ariadne = { version = "0.4.0", features = ["auto-color"] }
indent = "0.1.1"
log = "0.4.21"

[dev-dependencies]
assert2 = "0.3.14"

