[package]
name = "orco"
version = "0.0.1"
edition = "2021"
authors = ["InfiniteCoder <info@infinitecoder.org>"]
description = "Cross-platform compiler. IR and tools to work with it"
readme = "README.md"
repository = "https://github.com/InfiniteCoder01/orco"
license = "MIT OR Apache-2.0"
keywords = ["orco", "compiler", "ir"]
categories = ["compilers", "data-structures", "development-tools"]

[dependencies]
miette = "7.2.0"
thiserror = "1.0.63"
ariadne = { git = "https://github.com/InfiniteCoder01/ariadne" }

derivative = "2.2.0"
downcast-rs = "1.2.1"
dyn-clone = "1.0.17"

indent = "0.1.1"
log = "0.4.22"

[dev-dependencies]
assert2 = "0.3.14"
