[package]
name = "orco-backend-cranelift"
version = "0.0.1"
edition = "2021"
authors = ["InfiniteCoder <info@infinitecoder.org>"]
description = "Cranelift backend for OrCo"
repository = "https://github.com/infinitecoder/orco"
license = "MIT OR Apache-2.0"
keywords = ["orco", "compiler", "cranelift", "backend", "wasm"]
categories = [
    "compilers",
    "api-bindings",
    "wasm",
]

[dependencies]
cranelift-codegen = "0.107.0"
cranelift-frontend = "0.107.0"
cranelift-module = "0.107.0"
cranelift-object = "0.107.0"
log = "0.4.21"
orco = { path = "../../orco", version = "0.0.1" }
