[package]
name = "orco-ra"
version = "0.1.0"
edition = "2024"

[dependencies]
orco = { workspace = true }
orco-cgen = { workspace = true }
ra_ap_base_db = "0.0.293"
ra_ap_hir = "0.0.293"
ra_ap_hir_def = "0.0.293"
ra_ap_hir_ty = "0.0.293"
ra_ap_ide = "0.0.293"
ra_ap_vfs = "0.0.293"
triomphe = "0.1.14"

